[metadata]
name = d2to1
version = 0.1.2
author = Erik M. Bray
author-email = embray@stsci.edu
summary = Allows using distutils2-like setup.cfg files for a package's metadata
 with a distribute/setuptools setup.py
description-file = README
home-page = http://pypi.python.org/pypi/d2to1
license = BSD
requires-dist = setuptools
classifier =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Framework :: Setuptools Plugin
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = d2to1

[egg_info]
#tag_build = dev
#tag_svn_revision = true
